--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,16 +4,16 @@
 >
   <mat-sidenav #start>
     <mat-toolbar color="primary">
-      <span style="color: white">Welcome</span>
+      <span style="color: white">Filmes Top</span>
       <span style="flex: 1 1 auto;"></span>
       <button mat-icon-button (click)="start.close()"><mat-icon>arrow_forward</mat-icon></button>
     </mat-toolbar>
     <mat-nav-list>
       <a mat-list-item routerLink="/" routerLinkActive="active" (click)="start.close()">Home</a>
-      <a mat-list-item *ngIf="isLoggedIn" routerLink="/profile" routerLinkActive="active" (click)="start.close()">Profile</a>
+      <a mat-list-item *ngIf="isLoggedIn" routerLink="/profile" routerLinkActive="active" (click)="start.close()">Perfil</a>
       <a mat-list-item *ngIf="!isLoggedIn" routerLink="/login" routerLinkActive="active" (click)="start.close()">Login</a>
       <a mat-list-item *ngIf="isLoggedIn" routerLink="/" routerLinkActive="active" (click)="start.close(); auth.signOut()">Logout</a>
-      <a mat-list-item routerLink="/genres" routerLinkActive="active" (click)="start.close()">Genres</a>
+      <a mat-list-item routerLink="/genres" routerLinkActive="active" (click)="start.close()">Gêneros</a>
     </mat-nav-list>
   </mat-sidenav>
 
@@ -23,33 +23,33 @@
     </button>
     <span class="center-flex"></span>
     <span>
-      <a routerLink="/" [class.home-name-padding]="isLoggedIn">Movies + TV Shows <span class="janco-ocult">by JancoBH</span></a>
+      <a routerLink="/" [class.home-name-padding]="isLoggedIn">Filmes Top <span class="janco-ocult"> - beta :)</span></a>
     </span>
 
     <span class="center-flex"></span>
 
     <span *ngIf="auth.user | async as user" class="janco-ocult">{{ user.displayName }}</span>
     <span *ngIf="auth.user | async as user" class="img-header" mat-icon-button [matMenuTriggerFor]="menu" matTooltip="Options" [ngStyle]="{'background-image': 'url('+user?.photoURL+')'}"></span>
-    <button mat-icon-button [matMenuTriggerFor]="menu" matTooltip="Change Color" style="padding-right: 10px" *ngIf="!isLoggedIn">
+    <button mat-icon-button [matMenuTriggerFor]="menu" matTooltip="Alterar cor" style="padding-right: 10px" *ngIf="!isLoggedIn">
       <mat-icon>format_color_fill</mat-icon>
     </button>
 
     <mat-menu #menu="matMenu">
       <button mat-menu-item (click)="changeToRed()" [class.hidden]="isRedColor">
         <mat-icon style="color: #F44336">lens</mat-icon>
-        <span>Red</span>
+        <span>Vermelho</span>
       </button>
       <button mat-menu-item (click)="changeToBlue()" [class.hidden]="isBlueColor">
         <mat-icon style="color: #2196f3">lens</mat-icon>
-        <span>Blue</span>
+        <span>Azul</span>
       </button>
       <button mat-menu-item (click)="changeToGreen()" [class.hidden]="isGreenColor">
         <mat-icon style="color: #4caf50">lens</mat-icon>
-        <span>Green</span>
+        <span>Verde</span>
       </button>
       <button mat-menu-item (click)="auth.signOut()" *ngIf="isLoggedIn">
         <mat-icon>power_settings_new</mat-icon>
-        <span>Sign Out</span>
+        <span>Logout</span>
       </button>
     </mat-menu>
   </mat-toolbar>
