--- a/src/app/components/InTheater/movie/movie.component.css
+++ b/src/app/components/InTheater/movie/movie.component.css
@@ -75,7 +75,7 @@
 
 .cast-actor-card{
   vertical-align: top;
-  margin: 0 5px 0;
+  margin: 0px 5px 10px;
 }
 
 .video-movie-main{
@@ -93,8 +93,6 @@
 
 /* Large desktops and laptops */
 @media (min-width: 1201px) {
-  .parrallax-content{ height: 550px }
-  .cast-actor-card{  width: 13%;  }
   .video-movie-main{  width: 50%;  }
   .recommended-poster::ng-deep .movie-card{  width: 17% !important;  }
   .recommended-poster::ng-deep .movie-card .mat-card-title{  font-size: 20px !important  }
@@ -102,39 +100,34 @@
 
 /* Landscape tablets and medium desktops */
 @media (min-width: 992px) and (max-width: 1200px) {
-  .parrallax-content{ height: 520px }
-  .cast-actor-card{  width: 22%;  }
   .video-movie-main{  width: 60%;  }
   .recommended-poster::ng-deep .movie-card{  width: 23%;  }
 }
 
 /* Portrait tablets and small desktops */
 @media (min-width: 768px) and (max-width: 992px) {
-  .parrallax-content{ height: 530px }
   .genders-cat button{  margin-bottom: 5px;  }
-  .cast-actor-card{  width: 23%;  }
   .video-movie-main{  width: 70%;  }
   .recommended-poster::ng-deep .movie-card{  width: 37%;  }
 }
 
 /* Landscape phones and portrait tablets */
 @media (max-width: 768px) {
-  .parrallax-content{ height: 520px }
   .parallax-subtitle, p{ display: none}
-  .cast-actor-card{  width: 25%;  }
   .genders-cat button{  margin-bottom: 5px;  }
   .video-movie-main{  width: 80%;  }
   .recommended-poster::ng-deep .movie-card{  width: 31%;  }
   .recommended-poster::ng-deep .movie-card .mat-card-title{  font-size: 17px  }
+  .parallax-right-content h2 {  font-size: 1.5em; font-weight: 700;  }
 }
 
 /* Portrait phones and smaller */
 @media (max-width: 480px) {
-  .cast-actor-card{  width: 39%;  }
   .genders-cat button{  margin-bottom: 5px;  }
   .video-movie-main{  width: 90%;  }
   .parallax-img-container img {width: 150px; height: 250px}
   .parallax-subtitle, p{ display: none}
   .similar-movies { display: none}
   .recommended-poster::ng-deep .movie-card{  width: 88%;  }
+  .parallax-right-content h2 {  font-size: 1.5em; font-weight: 700;  }
 }
