--- a/src/app/components/OnTV/tv-show/tv-show.component.html
+++ b/src/app/components/OnTV/tv-show/tv-show.component.html
@@ -11,14 +11,14 @@
         <div class="parallax-right-content"> <!--Title-->
           <h2>{{tvShow.name}}</h2>
           <div class="parallax-btn-container">
-            <button mat-mini-fab matTooltip="Soon"><mat-icon>favorite</mat-icon></button>
-            <button mat-mini-fab matTooltip="Soon"><mat-icon>star</mat-icon></button>
-            <button mat-mini-fab matTooltip="Soon"><mat-icon>bookmark</mat-icon></button>
-            <a href="javascript:void(0)" (click)="openDialog()" *ngIf="video"><mat-icon>play_arrow</mat-icon> Play Trailer</a>
+            <button mat-mini-fab matTooltip="Em breve"><mat-icon>favorite</mat-icon></button>
+            <button mat-mini-fab matTooltip="Em breve"><mat-icon>star</mat-icon></button>
+            <button mat-mini-fab matTooltip="Em breve"><mat-icon>bookmark</mat-icon></button>
+            <h4><a href="javascript:void(0)" (click)="openDialog()" *ngIf="video"><mat-icon>play_arrow</mat-icon> Trailer</a></h4>
           </div>
-          <h3 class="parallax-subtitle">Overview</h3>
+          <h3 class="parallax-subtitle">Sinopse</h3>
           <p>{{tvShow.overview}}</p>
-          <h3 class="parallax-subtitle">Categories</h3>
+          <h3 class="parallax-subtitle">Categorias</h3>
           <a *ngFor="let genre of tvShow.genres" routerLink="/genres/{{genre.id}}/{{genre.name}}" class="genders-cat">
             <button mat-raised-button color="primary">{{genre.name}}</button>
           </a>
