--- a/src/app/components/ui/poster-card-view/poster-card.component.css
+++ b/src/app/components/ui/poster-card-view/poster-card.component.css
@@ -9,6 +9,7 @@ mat-card-title {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+  font-size: 100%;
 }
 
 mat-card-content {
