--- a/src/app/components/user/profile/profile.component.html
+++ b/src/app/components/user/profile/profile.component.html
@@ -7,9 +7,9 @@
   <ng-template #authenticated>
     <div *ngIf="auth.user | async as user">
       <h3>{{ user.displayName }}</h3>
-      <p>Member Since: {{menberSince | date}}</p>
+      <p>Membro desde: {{menberSince | date: 'dd/MM/y'}}</p>
       <img [src]="user.photoURL" width="50px">
-      <p *ngIf="user.favoriteColor">Favorite Color: {{ user?.favoriteColor }} </p>
+      <p *ngIf="user.favoriteColor">Cor favorita: {{ user?.favoriteColor }} </p>
     </div>
   </ng-template>
 </div>
