--- a/src/app/components/InTheater/all-movies/all-movies.component.html
+++ b/src/app/components/InTheater/all-movies/all-movies.component.html
@@ -1,16 +1,16 @@
 <div class="container padding-top-60">
 
-  <h2 style="text-align: left; padding-left: 20px;">All Movies #NowPlaying</h2>
+  <h2 style="text-align: left; padding-left: 20px;">Filmes</h2>
 
   <mat-card class="filter-movies-card">
-    <div style="margin-bottom: 24px">Filter by</div>
-    <button mat-raised-button color="primary">Now Playing</button>
-    <button mat-raised-button color="primary" disabled>Upcoming</button>
+    <div style="margin-bottom: 24px">Filtrar por</div>
+    <button mat-raised-button color="primary">Em cartaz</button>
+    <button mat-raised-button color="primary" disabled>Em breve</button>
     <button mat-raised-button color="primary" disabled>Popular</button>
     <mat-expansion-panel>
       <mat-expansion-panel-header>
         <mat-panel-title>
-          Genres
+          Gêneros
         </mat-panel-title>
       </mat-expansion-panel-header>
 
@@ -21,7 +21,7 @@
       </div>
 
     </mat-expansion-panel>
-    <div style="margin-top: 10px">Avg. User Review</div>
+    <div style="margin-top: 20px">Opinão do público</div>
     <mat-slider
       [max]="max"
       [min]="min"
@@ -29,7 +29,7 @@
       [thumb-label]="thumbLabel"
       [tick-interval]="tickInterval"
       [value]="value"
-      disabled
+      
     ></mat-slider>
   </mat-card>
 
