--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
 >
   <mat-sidenav #start>
     <mat-toolbar color="primary">
-      <span style="color: white">Filmes Top</span>
+      <span style="color: white">Dodz Filmes</span>
       <span style="flex: 1 1 auto;"></span>
       <button mat-icon-button (click)="start.close()"><mat-icon>arrow_forward</mat-icon></button>
     </mat-toolbar>
@@ -23,7 +23,7 @@
     </button>
     <span class="center-flex"></span>
     <span>
-      <a routerLink="/" [class.home-name-padding]="isLoggedIn">Filmes Top <span class="janco-ocult"> - beta :)</span></a>
+      <a routerLink="/" [class.home-name-padding]="isLoggedIn">Dodz Filmes<span class="janco-ocult"> - beta :)</span></a>
     </span>
 
     <span class="center-flex"></span>
@@ -35,15 +35,10 @@
     </button>
 
     <mat-menu #menu="matMenu">
-      <button mat-menu-item (click)="changeToRed()" [class.hidden]="isRedColor">
-        <mat-icon style="color: #F44336">lens</mat-icon>
-      </button>
-      <button mat-menu-item (click)="changeToBlue()" [class.hidden]="isBlueColor">
-        <mat-icon style="color: #2196f3">lens</mat-icon>
-      </button>
-      <button mat-menu-item (click)="changeToGreen()" [class.hidden]="isGreenColor">
-        <mat-icon style="color: #4caf50">lens</mat-icon>
-      </button>
+        <mat-icon style="color: #F44336; cursor: pointer; padding-left: 20px" (click)="changeToRed()" [class.hidden]="isRedColor">lens</mat-icon>
+        <mat-icon style="color: #2196f3; cursor: pointer; padding-left: 20px" (click)="changeToBlue()" [class.hidden]="isBlueColor">lens</mat-icon>
+        <mat-icon style="color: #4caf50; cursor: pointer; padding-left: 20px" (click)="changeToGreen()" [class.hidden]="isGreenColor">lens</mat-icon>
+        
       <button mat-menu-item (click)="auth.signOut()" *ngIf="isLoggedIn">
         <mat-icon>power_settings_new</mat-icon>
         <span>Logout</span>
